# eventually-any

./: Cargo.toml  LICENSE  README.md
examples/: bank_account.rs  concurrent_writes.rs  minimal.rs  multi_database.rs  multi_schema_upcasting.rs  order_lifecycle.rs  snapshot_repository.rs
migrations/mysql/: 1_events.up.sql  2_aggregates.up.sql
migrations/snapshots/mysql/: 2_snapshots.up.sql  3_schema_version.down.sql  3_schema_version.up.sql
migrations/snapshots/postgres/: 2_snapshots.up.sql
migrations/snapshots/sqlite/: 2_snapshots.up.sql
migrations/sqlite/: 2_aggregates.up.sql
src/: aggregate.rs  event.rs  lib.rs  logging.rs  snapshot.rs  upcasting.rs
tests/: aggregate_repository.rs  event_store.rs  schema_versioning.rs  snapshot_repository.rs
