[package]
name = "eventually-any"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
eventually = { version = "0.5.0", features = [
    "serde-json",
], git = "https://github.com/get-eventually/eventually-rs" }
futures = "0.3.32"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "any",
    "migrate",
    "json",
] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread"] }
eventually-macros = { git = "https://github.com/get-eventually/eventually-rs", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
testcontainers-modules = { version = "0.15.0", features = [
    "postgres",
    "mysql",
] }

[features]
default = []
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
migrations = []
snapshots = []

[[example]]
name = "bank_account"
path = "examples/bank_account.rs"
required-features = ["sqlite", "migrations"]
# Demonstrates the full aggregate lifecycle: open, deposit, withdraw, reload,
# domain errors, and closing. Uses the classic aggregate::Repository.
# Run: cargo run --example bank_account --features sqlite,migrations


[[example]]
name = "order_lifecycle"
path = "examples/order_lifecycle.rs"
required-features = ["sqlite", "migrations"]
# Demonstrates raw event-store usage: multi-batch appends, VersionSelect::All,
# VersionSelect::From (checkpoint resume), metadata inspection, and projection
# rebuilding.
# Run: cargo run --example order_lifecycle --features sqlite,migrations

[[example]]
name = "concurrent_writes"
path = "examples/concurrent_writes.rs"
required-features = ["sqlite", "migrations"]
# Demonstrates Optimistic Concurrency Control at both the event-store and
# aggregate-repository levels, plus a realistic optimistic retry loop.
# Run: cargo run --example concurrent_writes --features sqlite,migrations

[[example]]
name = "snapshot_repository"
path = "examples/snapshot_repository.rs"
required-features = ["sqlite", "snapshots", "migrations"]
# Demonstrates the snapshot::Repository: append-only snapshots, full audit
# trail, delta replay, and two aggregate types coexisting in the same table.
# Run: cargo run --example snapshot_repository --features sqlite,snapshots,migrations

[[example]]
name = "multi_schema_upcasting"
path = "examples/multi_schema_upcasting.rs"
required-features = ["sqlite", "migrations"]
# Demonstrates three-generation schema migration (V1→V2→V3) using named-struct
# Upcaster implementations, chained automatically by UpcasterChain.
# Run: cargo run --example multi_schema_upcasting --features sqlite,migrations

[[example]]
name = "multi_database"
path = "examples/multi_database.rs"
required-features = ["sqlite", "postgres", "mysql", "migrations"]
# Demonstrates running identical domain logic against SQLite, PostgreSQL, and
# MySQL by switching only the connection string. Asserts identical results.
# Run: cargo run --example multi_database --features sqlite,postgres,mysql,migrations
